--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -29,7 +29,8 @@ set +x
 echo 'The following complex command extracts the value of the <name/> element'
 echo 'within <project/> of your Java/Maven project''s "pom.xml" file.'
 set -x
-NAME=$(mvn help:evaluate -Dexpression=project.name | grep -v "^\[" | sed 's/\x1b\[[0-9;]*m//g')
+NAME=$(mvn exec:exec -Dexec.executable="echo" -Dexec.args='${project.name}' --non-recursive | grep -v "^\[" | sed 's/\x1b\[[0-9;]*m//g')
+
 set +x
 
 echo 'The following complex command behaves similarly to the previous one but'
